<?xml version="1.0"?>
<package format="3">
  <name>my_mission_package</name>
  <version>0.1.0</version>
  <description>Simple mission controller that stops when object detected.</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>object_detection_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
